ADD_SUBDIRECTORY(library)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY( cartogis )
ADD_SUBDIRECTORY( cartonifti )
IF( OPENSLIDE_FOUND )
  ADD_SUBDIRECTORY( cartoopenslide )
ENDIF()
if( DCMTK_FOUND AND TIFF_FOUND AND PNG12_FOUND )
  ADD_SUBDIRECTORY( cartodicom )
ENDIF()
if( TIFF_FOUND )
  ADD_SUBDIRECTORY( cartotiff )
ENDIF()

